--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,10 +13,14 @@
 
 <!-- Favicons-->
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
-<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-<link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+<link rel="apple-touch-icon" type="image/x-icon"
+	href="img/apple-touch-icon-57x57-precomposed.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72"
+	href="img/apple-touch-icon-72x72-precomposed.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114"
+	href="img/apple-touch-icon-114x114-precomposed.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="144x144"
+	href="img/apple-touch-icon-144x144-precomposed.png">
 
 <!-- GOOGLE WEB FONT -->
 <link
@@ -46,9 +50,11 @@
 
 	<main>
 		<div id="carousel-home">
-			<div class="owl-carousel owl-theme" >
-				<div class="owl-slide cover" style="background-image: url(img/index_main1.png);">
-					<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+			<div class="owl-carousel owl-theme">
+				<div class="owl-slide cover"
+					style="background-image: url(img/index_main1.png);">
+					<div class="opacity-mask d-flex align-items-center"
+						data-opacity-mask="rgba(0, 0, 0, 0.5)">
 						<div class="container">
 							<div class="row justify-content-center justify-content-md-start">
 								<div class="col-lg-12 static">
@@ -56,11 +62,9 @@
 										<h2 class="owl-slide-animated owl-slide-title">
 											'나'다운 여행<br>마이 리얼 코리아
 										</h2>
-										<p class="owl-slide-animated owl-slide-subtitle">쉽고 편한 투어, 티켓 예약과 여행 동행 찾기 까지</p>
-										<div class="owl-slide-animated owl-slide-cta">
-											<!-- 채팅 버튼 (지울거임) 
-											<a class="btn_1" href="chat?receiverId=aaa111" role="button"  >채팅</a>-->
-										</div>
+										<p class="owl-slide-animated owl-slide-subtitle">쉽고 편한 투어,
+											티켓 예약과 여행 동행 찾기 까지</p>
+										<div class="owl-slide-animated owl-slide-cta"></div>
 									</div>
 								</div>
 							</div>
@@ -68,7 +72,8 @@
 					</div>
 				</div>
 				<!--/owl-slide-->
-				<div class="owl-slide cover" style="background-image: url(img/index_main2.png);">
+				<div class="owl-slide cover"
+					style="background-image: url(img/index_main2.png);">
 					<div class="opacity-mask d-flex align-items-center"
 						data-opacity-mask="rgba(0, 0, 0, 0.6)">
 						<div class="container">
@@ -78,9 +83,9 @@
 										<h2 class="owl-slide-animated owl-slide-title">
 											다양한 투어와 티켓<br>
 										</h2>
-										<p class="owl-slide-animated owl-slide-subtitle">마이리얼코리아에만 있는</p>
-										<div class="owl-slide-animated owl-slide-cta">
-										</div>
+										<p class="owl-slide-animated owl-slide-subtitle">마이리얼코리아에만
+											있는</p>
+										<div class="owl-slide-animated owl-slide-cta"></div>
 									</div>
 								</div>
 							</div>
@@ -88,7 +93,8 @@
 					</div>
 				</div>
 				<!--/owl-slide-->
-				<div class="owl-slide cover" style="background-image: url(img/index_main3.png);">
+				<div class="owl-slide cover"
+					style="background-image: url(img/index_main3.png);">
 					<div class="opacity-mask d-flex align-items-center"
 						data-opacity-mask="rgba(0, 0, 0, 0.5)">
 						<div class="container">
@@ -98,9 +104,9 @@
 										<h2 class="owl-slide-animated owl-slide-title">
 											함께 하고 싶다면<br>동행 찾기
 										</h2>
-										<p class="owl-slide-animated owl-slide-subtitle">나홀로 여행도 좋지만</p>
-										<div class="owl-slide-animated owl-slide-cta">
-										</div>
+										<p class="owl-slide-animated owl-slide-subtitle">나홀로 여행도
+											좋지만</p>
+										<div class="owl-slide-animated owl-slide-cta"></div>
 									</div>
 								</div>
 							</div>
@@ -117,8 +123,8 @@
 			<div class="container margin_60">
 				<div class="row small-gutters categories_grid">
 					<div class="col-sm-12 col-md-6">
-						<a href="tour-list"> 
-						<img src="img/tour_index.png" alt="" class="img-fluid">
+						<a href="tour-list"> <img src="img/tour_index.png" alt=""
+							class="img-fluid">
 							<div class="wrapper">
 								<h5></h5>
 								<p>투어상품 CLICK</p>
@@ -128,8 +134,8 @@
 					<div class="col-sm-12 col-md-6">
 						<div class="row small-gutters mt-md-0 mt-sm-2">
 							<div class="col-sm-6">
-								<a href="tripboard-list"> <img
-									src="img/main_tripboard3.png" alt="" class="img-fluid">
+								<a href="tripboard-list"> <img src="img/main_tripboard3.png"
+									alt="" class="img-fluid">
 									<div class="wrapper">
 										<h5></h5>
 										<p>동행 CLICK</p>
@@ -138,7 +144,8 @@
 							</div>
 							<div class="col-sm-6">
 								<a href="freeboard-list"> <img
-									src="img/freeboard/freeboard_index.jpg" alt="" class="img-fluid">
+									src="img/freeboard/freeboard_index.jpg" alt=""
+									class="img-fluid">
 									<div class="wrapper">
 										<h5></h5>
 										<p>자유게시판 CLICK</p>
@@ -196,18 +203,18 @@
 		<!-- End white_bg -->
 
 		<div class="container margin_60">
-			<div class="main_title">
-			</div>
+			<div class="main_title"></div>
 		</div>
 		<!-- End container -->
 	</main>
 	<!--========================= End main =========================-->
-	
+
 	<!--========================= footer ========================-->
 	<footer class="revealed">
-		<div id="footer" th:include="include-common-bottom::include-common-bottom"></div>
+		<div id="footer"
+			th:include="include-common-bottom::include-common-bottom"></div>
 	</footer>
-		<!-- End container -->
+	<!-- End container -->
 	<!--========================= End footer ========================-->
 
 	<div id="toTop"></div>
@@ -284,7 +291,7 @@
 	<script src="js/jquery-2.2.4.min.js"></script>
 	<script src="js/common_scripts_min.js"></script>
 	<script src="js/functions.js"></script>
-	
+
 </body>
 
 </html>
