웹소켓 연결 주소 변경

--- a/src/main/resources/templates/include-common-top.html
+++ b/src/main/resources/templates/include-common-top.html
@@ -94,7 +94,7 @@
 					</div>
 					<!-- End main-menu -->
 					<ul id="top_tools">
-						<!-- Chat icon (수정해야함) -->
+						<!-- Chat icon -->
 						<th:block th:if="${session.loginUser!=null}">
 						<li>
 							<a href="#" th:data-user-id="${session.loginUser.userId}" id="chat-pop-up" >
